--- a/templates/about.html
+++ b/templates/about.html
@@ -45,13 +45,15 @@
     <main>
         <!-- titre -->
         <header>
-            <div id="circles">
-                <svg viewBox="0 0 292 226" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <circle cx="113" cy="113" r="113" fill="#7FCCF0"/>
-                    <circle cx="226" cy="146" r="66" fill="#BDDCFD"/>
-                </svg>       
+            <div id="title">
+                <div id="circles">
+                    <svg viewBox="0 0 292 226" fill="none" xmlns="http://www.w3.org/2000/svg">
+                        <circle cx="113" cy="113" r="113" fill="#7FCCF0"/>
+                        <circle cx="226" cy="146" r="66" fill="#BDDCFD"/>
+                    </svg>       
+                </div>
+                <h1>QUI SOMMES NOUS ?</h1>
             </div>
-            <h1>QUI SOMMES NOUS ?</h1>
         </header>
 
         <!-- about -->
@@ -63,7 +65,7 @@
                 </div>
                 <div class="about-el-txt">
                     <h2 id="about-nom">
-                        LUX GLUCO CHECK
+                        LUX GLUCO&nbsp;CHECK
                     </h2>
                     <p>
                         Nous sommes un groupe d'étudiants passionnés, unis par une vision audacieuse
@@ -75,7 +77,7 @@
             </article>
 
             <!-- mission -->
-            <article class="about-el" style="flex-direction: row-reverse;">
+            <article class="about-el reverse;">
                 <div class="about-el-img" style="margin: 0">
                     <img src="/static/img/photo 2.jpg" alt="">
                 </div>
