--- a/templates/about.html
+++ b/templates/about.html
@@ -77,7 +77,7 @@
             </article>
 
             <!-- mission -->
-            <article class="about-el reverse;">
+            <article class="about-el reverse">
                 <div class="about-el-img" style="margin: 0">
                     <img src="/static/img/photo 2.jpg" alt="">
                 </div>
