regler margin left de la ligne reversed dans about

--- a/static/css/about.css
+++ b/static/css/about.css
@@ -107,6 +107,10 @@ header {
 .reverse {
   flex-direction: row-reverse;
 }
+.reverse .about-el-txt {
+  margin-left: 0;
+  margin-right: 30px;
+}
 
 @media (max-width: 850px) {
   main {
