--- a/static/css/about.scss
+++ b/static/css/about.scss
@@ -132,6 +132,11 @@ header {
 }
 .reverse {
     flex-direction: row-reverse;
+
+    .about-el-txt {
+        margin-left: 0;
+        margin-right: 30px;
+    }
 }
 
 
