--- a/templates/about.html
+++ b/templates/about.html
@@ -78,10 +78,10 @@
 
             <!-- mission -->
             <article class="about-el reverse">
-                <div class="about-el-img" style="margin: 0">
+                <div class="about-el-img">
                     <img src="/static/img/photo 2.jpg" alt="">
                 </div>
-                <div class="about-el-txt" style="margin-right: 30px">
+                <div class="about-el-txt">
                     <h2>
                         Notre mission
                     </h2>
