--- a/static/css/about.scss
+++ b/static/css/about.scss
@@ -162,7 +162,16 @@ header {
             margin: 0 auto !important;
 
             h2 {
+                font-size: 25px;
                 margin: 40px 0;
+            }
+
+            p {
+                font-size: 15px;
+            }
+
+            #about-nom {
+                font-size: 30px;
             }
         }
     }
