--- a/static/css/offres.css
+++ b/static/css/offres.css
@@ -1,7 +1,17 @@
 body {
+  width: 100%;
   background-image: url(/static/img/bg-with-colors.svg);
-  background-size: contain;
-  background-repeat: repeat;
+  background-repeat: repeat-y;
+  background-size: cover;
+}
+
+#bg-color {
+  height: 100dvh;
+  width: 100vw;
+  position: fixed;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -100;
 }
 
 main {
@@ -17,7 +27,7 @@ header {
   position: relative;
   width: auto;
   margin: 0 auto;
-  margin-bottom: 50px;
+  margin-bottom: 20px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -53,88 +63,90 @@ header {
     margin-bottom: -10px;
   }
 }
-.about-el {
+#offres {
   width: 100%;
-  padding-bottom: 150px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
 }
-.about-el .about-el-img {
-  width: 30%;
-}
-.about-el .about-el-img img {
+
+.offre {
   width: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-}
-.about-el .about-el-txt {
-  width: 50%;
-  align-self: stretch;
-  margin-left: 30px;
+  max-width: 1000px;
+  min-height: 250px;
+  margin: 50px auto;
+  padding: 30px 40px;
+  border-radius: 50px;
+  background-color: var(--bleu-tres-clair);
   display: flex;
   flex-direction: column;
-  justify-content: center;
-  align-items: center;
 }
-.about-el .about-el-txt h2 {
-  font-size: 28px;
+
+.offre-title {
+  padding-bottom: 10px;
+  padding-right: 10px;
+  font-size: 25px;
   font-family: var(--montserrat-semibold);
-  text-align: center;
-  color: #101E48;
-  margin-top: 0;
-  margin-bottom: 50px;
-}
-.about-el .about-el-txt p {
-  font-size: 20px;
-  font-family: var(--montserrat-regular);
+  color: var(--bleu-fonce);
   margin: 0;
 }
-.about-el #about-nom {
-  font-size: 35px;
+
+.offre-details {
+  flex-grow: 1;
+  font-family: var(--montserrat-regular);
+  font-size: 18px;
+  margin: 0;
+  padding: 10px 0;
+  color: var(--black);
+}
+
+.offre-button-container {
+  width: 100%;
+  margin-top: auto;
+  padding-top: 10px;
+}
+.offre-button-container .offre-button {
+  display: block;
+  cursor: pointer;
+  margin-left: auto;
+  padding: 10px 40px;
+  border: none;
+  border-radius: 30px;
+  font-family: var(--montserrat-regular);
+  letter-spacing: 0.5px;
+  color: var(--white-pure);
+  background-color: var(--bleu-clair);
+}
+
+.offre-plus-container {
+  display: flex;
+  justify-content: center;
+  padding-bottom: 50px;
+}
+.offre-plus-container p {
+  margin: 0;
+  text-align: center;
+  text-decoration: underline;
+  cursor: pointer;
   color: var(--bleu-fonce);
 }
-
-.reverse {
-  flex-direction: row-reverse;
-}
-.reverse .about-el-txt {
-  margin-left: 0;
-  margin-right: 30px;
+.offre-plus-container p:active {
+  color: var(--black);
 }
 
-@media (max-width: 850px) {
+@media (max-width: 500px) {
   main {
     padding: 0 20px;
   }
-  #title {
-    margin-bottom: 30px;
+  .offre {
+    padding: 25px 30px;
+    border-radius: 30px;
   }
-  .about-el {
-    flex-direction: column;
-    padding-bottom: 120px;
+  .offre-title {
+    font-size: 20px;
   }
-  .about-el .about-el-img {
-    width: 100%;
-    max-width: 400px;
-    margin: 0 auto !important;
-  }
-  .about-el .about-el-txt {
-    width: 100%;
-    margin: 0 auto !important;
-  }
-  .about-el .about-el-txt h2 {
-    font-size: 25px;
-    margin: 40px 0;
-  }
-  .about-el .about-el-txt p {
+  .offre-details {
     font-size: 15px;
   }
-  .about-el .about-el-txt #about-nom {
-    font-size: 30px;
-  }
-  .reverse {
-    flex-direction: column;
+  .offre-button-container .offre-button {
+    padding: 10px 35px;
   }
 }
 /* Fonts */
@@ -195,4 +207,4 @@ header {
   --pacifico: Pacifico;
   --poppins-md: PoppinsMd;
   --padding-glob: 40px;
-}/*# sourceMappingURL=about.css.map */
+}/*# sourceMappingURL=offres.css.map */
