--- a/templates/offres.html
+++ b/templates/offres.html
@@ -10,9 +10,12 @@
     <link rel="stylesheet" href="/static/nav/nav.css">
     <script src="/static/nav/nav.js"></script>
 
-    <link rel="stylesheet" href="/static/css/about.css">
+    <link rel="stylesheet" href="/static/css/offres.css">
 </head>
 <body>
+    <!-- bg -->
+    <img id="bg-color" src="/static/img/bg-with-colors.svg" alt="">
+
     <!-- Nav -->
     <nav>
         <div id="nav_marque">
@@ -54,66 +57,76 @@
                         <circle cx="226" cy="146" r="66" fill="#BDDCFD"/>
                     </svg>       
                 </div>
-                <h1>QUI SOMMES NOUS ?</h1>
+                <h1>OFFRES D'EMPLOIS</h1>
             </div>
         </header>
 
-        <!-- about -->
-        <div id="about">
-            <!-- qui est lgc -->
-            <article class="about-el">
-                <div class="about-el-img">
-                    <img src="/static/img//LGC photo profile.jpg" alt="">
+        <!-- offres -->
+        <div id="offres">
+            <article class="offre" style="margin-top: 0;">
+                <!-- title -->
+                <h2 class="offre-title">Developpeur</h2>
+                <!-- description -->
+                <p class="offre-details">
+                    Plusieurs postes pour informaticiens et informaticiennes disponibles. La tache principale
+                    sera le développement, si vous êtes compétant dans au moins 2 langues de programmation
+                    vous pouvez nous rejoindre.
+                </p>
+                <!-- button -->
+                <div class="offre-button-container">
+                    <button class="offre-button">Details</button>
                 </div>
-                <div class="about-el-txt">
-                    <h2 id="about-nom">
-                        LUX GLUCO&nbsp;CHECK
-                    </h2>
-                    <p>
-                        Nous sommes un groupe d'étudiants passionnés, unis par une vision audacieuse
-                        pour améliorer la vie des personnes atteintes de diabète. Notre équipe dynamique
-                        est composée de personnes aux compétences variées, allant de la biologie
-                        à l'ingénierie, et nous partageons tous une passion pour l'innovation médicale.
-                    </p>
+            </article>
+            
+            <article class="offre">
+                <!-- title -->
+                <h2 class="offre-title">Developpeur</h2>
+                <!-- description -->
+                <p class="offre-details">
+                    Plusieurs postes pour informaticiens et informaticiennes disponibles. La tache principale
+                    sera le développement, si vous êtes compétant dans au moins 2 langues de programmation
+                    vous pouvez nous rejoindre.
+                </p>
+                <!-- button -->
+                <div class="offre-button-container">
+                    <button class="offre-button">Details</button>
                 </div>
             </article>
 
-            <!-- mission -->
-            <article class="about-el reverse">
-                <div class="about-el-img">
-                    <img src="/static/img/photo 2.jpg" alt="">
-                </div>
-                <div class="about-el-txt">
-                    <h2>
-                        Notre mission
-                    </h2>
-                    <p>
-                        À "LUX GLUCOCHECK" notre mission est de révolutionner la gestion du diabète
-                        en rendant le processus de mesure du taux de sucre sanguin plus simple,
-                        plus confortable et plus accessible que jamais. Nous sommes déterminés à éliminer
-                        la douleur et la gêne associées aux méthodes traditionnelles de prélèvement sanguin
-                        pour les personnes atteintes de diabète.
-                    </p>
+            <article class="offre">
+                <!-- title -->
+                <h2 class="offre-title">Developpeur</h2>
+                <!-- description -->
+                <p class="offre-details">
+                    Plusieurs postes pour informaticiens et informaticiennes disponibles. La tache principale
+                    sera le développement, si vous êtes compétant dans au moins 2 langues de programmation
+                    vous pouvez nous rejoindre.
+                </p>
+                <!-- button -->
+                <div class="offre-button-container">
+                    <button class="offre-button">Details</button>
                 </div>
             </article>
 
-            <!-- engagement -->
-            <article class="about-el">
-                <div class="about-el-img">
-                    <img src="/static/img/photo 1.jpg" alt="">
-                </div>
-                <div class="about-el-txt">
-                    <h2>
-                        Notre engagement
-                    </h2>
-                    <p>
-                        Chez "DiabeteTech," la qualité de vie de nos utilisateurs est notre priorité absolue.
-                        Nous nous engageons à fournir un produit sûr, efficace et abordable pour tous ceux qui
-                        vivent avec le diabète. Notre équipe travaille sans relâche pour améliorer constamment
-                        notre technologie et rendre la gestion du diabète plus simple et plus confortable.
-                    </p>
+            <article class="offre">
+                <!-- title -->
+                <h2 class="offre-title">Developpeur</h2>
+                <!-- description -->
+                <p class="offre-details">
+                    Plusieurs postes pour informaticiens et informaticiennes disponibles. La tache principale
+                    sera le développement, si vous êtes compétant dans au moins 2 langues de programmation
+                    vous pouvez nous rejoindre.
+                </p>
+                <!-- button -->
+                <div class="offre-button-container">
+                    <button class="offre-button">Details</button>
                 </div>
             </article>
+        </div>
+
+        <!-- voir plus -->
+        <div class="offre-plus-container">
+            <p class="offre-plus">voir plus</p>
         </div>
     </main>
 </body>
