--- a/static/nav/nav.css
+++ b/static/nav/nav.css
@@ -173,7 +173,7 @@ nav {
 }
 /* Mobile */
 @media (max-width: 992px) {
-    .nav_el, .nav_el:hover {
+    .nav_el, .nav_el:hover, .nav_el_selected {
         padding: 20px 5px;
         border: none;
     }
