--- a/templates/offres.html
+++ b/templates/offres.html
@@ -74,11 +74,12 @@
                 </p>
                 <!-- button -->
                 <div class="offre-button-container">
-                    <button class="offre-button">Details</button>
+                    <button class="offre-button" onclick="window.location.pathname = '/templates/emploi.html'">
+                        Details
+                    </button>
                 </div>
             </article>
-            
-            <article class="offre">
+            <article class="offre" style="margin-top: 0;">
                 <!-- title -->
                 <h2 class="offre-title">Developpeur</h2>
                 <!-- description -->
@@ -89,11 +90,12 @@
                 </p>
                 <!-- button -->
                 <div class="offre-button-container">
-                    <button class="offre-button">Details</button>
+                    <button class="offre-button" onclick="window.location.pathname = '/templates/emploi.html'">
+                        Details
+                    </button>
                 </div>
             </article>
-
-            <article class="offre">
+            <article class="offre" style="margin-top: 0;">
                 <!-- title -->
                 <h2 class="offre-title">Developpeur</h2>
                 <!-- description -->
@@ -104,11 +106,12 @@
                 </p>
                 <!-- button -->
                 <div class="offre-button-container">
-                    <button class="offre-button">Details</button>
+                    <button class="offre-button" onclick="window.location.pathname = '/templates/emploi.html'">
+                        Details
+                    </button>
                 </div>
             </article>
-
-            <article class="offre">
+            <article class="offre" style="margin-top: 0;">
                 <!-- title -->
                 <h2 class="offre-title">Developpeur</h2>
                 <!-- description -->
@@ -119,7 +122,9 @@
                 </p>
                 <!-- button -->
                 <div class="offre-button-container">
-                    <button class="offre-button">Details</button>
+                    <button class="offre-button" onclick="window.location.pathname = '/templates/emploi.html'">
+                        Details
+                    </button>
                 </div>
             </article>
         </div>
